# kellnr

./: .dockerignore  .editorconfig  .envrc  .gitignore  .ignore  .release-plz.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml  deny.toml  devcontainer.common  flake.nix  initUserVol.sh  justfile  s3_storage.rs  setupUser.sh  shell.sh  sourceEnv.sh
crates/appstate/: Cargo.toml
crates/appstate/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: auth_req_token.rs  lib.rs  maybe_user.rs  oauth2.rs  token.rs
crates/common/: CHANGELOG.md  Cargo.toml
crates/common/src/: crate_data.rs  crate_overview.rs  cratesio_downloader.rs  cratesio_prefetch_msg.rs  crypto.rs  index_metadata.rs  lib.rs  normalized_name.rs  original_name.rs  prefetch.rs  publish_metadata.rs  search_result.rs  storage.rs  token_cache.rs  util.rs  version.rs  webhook.rs
crates/db/: CHANGELOG.md  Cargo.toml
crates/db/db-testcontainer/: Cargo.toml
crates/db/db-testcontainer/src/: lib.rs
crates/db/db_testcontainer/: Cargo.toml
crates/db/db_testcontainer/src/: lib.rs
crates/db/entity/: Cargo.toml
crates/db/entity/src/: cratesio_crate.rs  group.rs  lib.rs  oauth2_identity.rs  oauth2_state.rs  prelude.rs  toolchain.rs  toolchain_component.rs  toolchain_target.rs  user.rs  webhook.rs  webhook_queue.rs
crates/db/migration/: CHANGELOG.md  Cargo.toml  README.md
crates/db/migration/src/: iden.rs  lib.rs  m20220101_0000010_create_table.rs  m20220101_0000011_create_table.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs  m20220101_000003_create_table.rs  m20220101_000004_create_table.rs  m20220101_000005_create_table.rs  m20220101_000006_create_table.rs  m20220101_000006_index_metadata.rs  m20220101_000007_create_table.rs  m20220101_000008_create_table.rs  m20220101_000009_create_table.rs  m20250227_005754_add_readonly_user.rs  m20250319_191043_add_groups.rs  m20250412_0000012_hash_tokens.rs  m20250414_102510_add_unique_indices.rs  m20250911_000001_cratesio_indices.rs  m20250923_095440_webhooks.rs  m20260122_000001_add_pubtime.rs  m20260126_000001_v6_baseline.rs  m20260126_000002_v6_upgrade.rs  m20260128_000001_oauth2_identity.rs  m20260129_000001_database_improvements.rs  m20260130_000001_toolchain.rs  m20260406_000001_toolchain_component.rs  main.rs  old_index_metadata.rs
crates/db/migration/src/m20220101_0000010_create_table_entities/: crate_category_to_crate.rs  crate_meta.rs  cratesio_crate.rs  cratesio_meta.rs  mod.rs
crates/db/migration/src/m20220101_0000011_create_table_entities/: auth_token.rs  (+19 more)
crates/db/pg_testcontainer/: Cargo.toml
crates/db/pg_testcontainer/src/: lib.rs
crates/db/src/: auth_token.rs  con_string.rs  crate_meta.rs  crate_summary.rs  database.rs  doc_queue_entry.rs  download_counter.rs  error.rs  group.rs  krate.rs  lib.rs  password.rs  provider.rs  tables.rs  user.rs
crates/db/src/database/: mod.rs  operations.rs  test_utils.rs
crates/db/tests/: db_test.rs  image.rs  postgres_test.rs  sqlite_test.rs
crates/derive_jsonresponder/: Cargo.toml
crates/derive_jsonresponder/src/: lib.rs
crates/derive_jsonresponder/tests/: jsonresponder_test.rs  test.rs
crates/docs/: Cargo.toml
crates/docs/src/: api.rs  doc_archive.rs  doc_queue.rs  doc_queue_response.rs  docs_error.rs  lib.rs  upload_response.rs
crates/embedded-resources/: CHANGELOG.md  Cargo.toml
crates/embedded-resources/src/: lib.rs
crates/embedded_resources/: Cargo.toml
crates/embedded_resources/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: api_error.rs  error.rs  lib.rs
crates/index/: Cargo.toml
crates/index/src/: common_idx.rs  config_json.rs  cratesio_idx.rs  cratesio_prefetch_api.rs  git.rs  kellnr_idx.rs  kellnr_prefetch_api.rs  lib.rs  rwindex.rs
crates/json_payload/: Cargo.toml
crates/json_payload/src/: lib.rs
crates/json_payload/tests/: jsonpayload_test.rs  test.rs
crates/kellnr/: Cargo.toml  build.rs
crates/kellnr/src/: config_printer.rs  main.rs  openapi.rs
crates/kellnr/src/routes/: auth_routes.rs  crate_access_routes.rs  cratesio_api_routes.rs  docs_routes.rs  group_routes.rs  health_routes.rs  kellnr_api_routes.rs  mod.rs  oauth2_routes.rs  toolchain_routes.rs  ui_routes.rs  user_routes.rs  webhook_routes.rs
crates/registry/: Cargo.toml
crates/registry/src/: cached_crate_storage.rs  crate_group.rs  crate_user.rs  crate_version.rs  cratesio_api.rs  kellnr_api.rs  kellnr_crate_storage.rs  lib.rs  owner.rs  per_page.rs  pub_data.rs  pub_success.rs  registry_error.rs  search_params.rs  test_cookie_helper.rs  yank_success.rs
crates/settings/: Cargo.toml
crates/settings/src/: cli.rs  compile_time_config.rs  config_source.rs  constants.rs  deserialize_with.rs  docs.rs  leaf_labels.rs  lib.rs  local.rs  log.rs  log_format.rs  log_level.rs  oauth2.rs  origin.rs  postgresql.rs  protocol.rs  proxy.rs  registry.rs  s3.rs  settings.rs  setup.rs  startup.rs  storage.rs  toolchain.rs
crates/storage/: CHANGELOG.md  Cargo.toml
crates/storage/minio-testcontainer/: Cargo.toml
crates/storage/minio-testcontainer/src/: lib.rs
crates/storage/minio_testcontainer/: Cargo.toml
crates/storage/rustfs-testcontainer/: Cargo.toml
crates/storage/rustfs-testcontainer/src/: lib.rs
crates/storage/src/: cached_crate_storage.rs  cratesio_crate_storage.rs  fs_storage.rs  kellnr_crate_storage.rs  lib.rs  providers.rs  s3.rs  s3_storage.rs  storage.rs  storage_error.rs  storage_provider.rs  toolchain_storage.rs
crates/storage/tests/: image.rs  s3_tests.rs
crates/web-ui/: Cargo.toml
crates/web-ui/src/: crate_access.rs  error.rs  group.rs  lib.rs  oauth2.rs  session.rs  ui.rs  user.rs
crates/web_ui/: Cargo.toml
crates/web_ui/src/: crate_access.rs  error.rs  group.rs  lib.rs  session.rs  settings.rs  ui.rs  user.rs
crates/webhooks/: Cargo.toml
crates/webhooks/src/: endpoints.rs  lib.rs  service.rs  tests.rs  types.rs
tests/crates/test-docs/full-toml/: Cargo.toml
tests/crates/test-migration/foo-bar/: Cargo.toml
tests/crates/test-s3-storage/foo-bar/: Cargo.toml
(+430 files in other folders)
