[package]
name = "appstate"
authors.workspace = true
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
common.workspace = true
db.workspace = true
settings.workspace = true
storage.workspace = true

# External dependencies
axum-extra.workspace = true
axum.workspace = true
flume.workspace = true

[lints]
workspace = true
