[package]
name = "appstate"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
common.workspace = true
db.workspace = true
settings.workspace = true
storage.workspace = true

# External dependencies
axum-extra.workspace = true
axum.workspace = true
flume.workspace = true

[lints]
workspace = true
