[package]
name = "kellnr-appstate"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-settings.workspace = true
kellnr-storage.workspace = true

# External dependencies
axum-extra.workspace = true
axum.workspace = true
flume.workspace = true

[lints]
workspace = true
