[package]
name = "auth"
authors.workspace = true
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
db.workspace = true
settings.workspace = true

# External dependencies from crates.io
axum.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper.workspace = true
mockall.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
