[package]
name = "kellnr-auth"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# Internal dependencies from Kellnr
kellnr-appstate.workspace = true
kellnr-db.workspace = true
kellnr-settings.workspace = true

# External dependencies from crates.io
axum.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper.workspace = true
mockall.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
