[package]
name = "common"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# External dependencies from crates.io
axum.workspace = true
chrono.workspace = true
rand.workspace = true
regex.workspace = true
sea-orm.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true

[lints]
workspace = true
