[package]
name = "kellnr-common"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
moka.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
