[package]
name = "db"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"

[dependencies]
# Internal dependencies from Kellnr
common.workspace = true
settings.workspace = true
pg_testcontainer.workspace = true
entity.workspace = true
migration.workspace = true

# External dependencies from crates.io
serde.workspace = true
chrono.workspace = true
mockall.workspace = true
thiserror.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
sha256.workspace = true

[dev-dependencies]
rm_rf.workspace = true
testcontainers.workspace = true
tokio.workspace = true
