[package]
name = "kellnr-db"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# Internal dependencies from Kellnr
kellnr-common.workspace = true
kellnr-db-testcontainer.workspace = true
kellnr-entity.workspace = true
kellnr-migration.workspace = true
kellnr-settings.workspace = true

# External dependencies from crates.io
chrono.workspace = true
mockall.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha256.workspace = true
thiserror.workspace = true

[dev-dependencies]
rm_rf.workspace = true
testcontainers.workspace = true
tokio.workspace = true

[lints]
workspace = true
