[package]
name = "docs"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"

[dependencies]
# Internal dependencies from Kellnr
settings.workspace = true
registry.workspace = true
common.workspace = true
db.workspace = true
error.workspace = true
auth.workspace = true
storage.workspace = true
appstate.workspace = true

# External dependencies from crates.io
zip.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
flate2.workspace = true
tar.workspace = true
cargo.workspace = true
fs_extra.workspace = true
tracing.workspace = true
axum.workspace = true
tokio.workspace = true
http-body-util.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
hyper.workspace = true
