[package]
name = "docs"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
auth.workspace = true
common.workspace = true
db.workspace = true
error.workspace = true
registry.workspace = true
settings.workspace = true
storage.workspace = true

# External dependencies from crates.io
axum.workspace = true
cargo.workspace = true
flate2.workspace = true
fs_extra.workspace = true
http-body-util.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
hyper.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
