[package]
name = "kellnr-docs"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# Internal dependencies from Kellnr
kellnr-appstate.workspace = true
kellnr-auth.workspace = true
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-error.workspace = true
kellnr-registry.workspace = true
kellnr-settings.workspace = true
kellnr-storage.workspace = true

# External dependencies from crates.io
axum.workspace = true
cargo.workspace = true
flate2.workspace = true
fs_extra.workspace = true
http-body-util.workspace = true
hyper.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
hyper.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
