[package]
name = "kellnr-embedded-resources"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

# Include the static web resources in the crate package.
# The resources are built into the binary at compile time.
# The CI copies the static resources into the "static" folder before publishing the crate.
include = ["src/**", "static/**", "Cargo.toml"]

[dependencies]
axum.workspace = true
bytes.workspace = true
include_dir.workspace = true
mime_guess.workspace = true
tracing.workspace = true

[lints]
workspace = true
