[package]
name = "error"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
common.workspace = true
db.workspace = true
storage.workspace = true

# External dependencies
axum.workspace = true
serde.workspace = true
zip.workspace = true

[lints]
workspace = true
