[package]
name = "kellnr-error"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-storage.workspace = true

# External dependencies
axum.workspace = true
serde.workspace = true
zip.workspace = true

[lints]
workspace = true
