[package]
name = "index"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies from Kellnr
settings.workspace = true
common.workspace = true
db.workspace = true
appstate.workspace = true

# External dependencies from crates.io
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
mockall.workspace = true
tracing.workspace = true
reqwest.workspace = true
chrono.workspace = true
moka.workspace = true
flume.workspace = true
axum.workspace = true
tokio.workspace = true
http-body-util.workspace = true
hyper.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
