[package]
name = "index"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
common.workspace = true
db.workspace = true
settings.workspace = true

# External dependencies from crates.io
axum.workspace = true
chrono.workspace = true
flume.workspace = true
http-body-util.workspace = true
hyper.workspace = true
mockall.workspace = true
moka.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
