[package]
name = "index"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
common.workspace = true
db.workspace = true
settings.workspace = true
storage.workspace = true

# External dependencies from crates.io
axum.workspace = true
chrono.workspace = true
flume.workspace = true
http-body-util.workspace = true
hyper.workspace = true
mockall.workspace = true
moka.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
