[package]
name = "json_payload"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dependencies]
# Internal dependencies from Kellnr
derive_jsonresponder.workspace = true

# External dependencies from crates.io
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
serde_json.workspace = true
serde.workspace = true
rocket.workspace = true

[dev-dependencies]
trybuild.workspace = true