[package]
name = "kellnr"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
auth.workspace = true
common.workspace = true
db.workspace = true
docs.workspace = true
index.workspace = true
registry.workspace = true
settings.workspace = true
storage.workspace = true
web_ui.workspace = true
webhooks.workspace = true
embedded_resources.workspace = true

# External dependencies from crates.io
axum-extra.workspace = true
axum.workspace = true
flume.workspace = true
openssl = { version = "*", optional = true } # Not needed directly but for cross-compilation with the vendored-openssl feature
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
moka.workspace = true

[features]
vendored-openssl = ["openssl/vendored"]

# Ignore openssl in cargo machete, else
# "cargo machete" will show openssl as an unused depedenency
[package.metadata.cargo-machete]
ignored = ["openssl"]

[lints]
workspace = true
