[package]
name = "kellnr"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies from Kellnr
kellnr-appstate.workspace = true
kellnr-auth.workspace = true
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-docs.workspace = true
kellnr-index.workspace = true
kellnr-registry.workspace = true
kellnr-settings.workspace = true
kellnr-storage.workspace = true
kellnr-web_ui.workspace = true
kellnr-webhooks.workspace = true
kellnr-embedded_resources.workspace = true

# External dependencies from crates.io
axum-extra.workspace = true
axum.workspace = true
flume.workspace = true
openssl = { version = "*", optional = true } # Not needed directly but for cross-compilation with the vendored-openssl feature
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
moka.workspace = true

[features]
vendored-openssl = ["openssl/vendored"]

# Ignore openssl in cargo machete, else
# "cargo machete" will show openssl as an unused depedenency
[package.metadata.cargo-machete]
ignored = ["openssl"]

[lints]
workspace = true
