[package]
name = "kellnr"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../../README.md"

[dependencies]
# Internal dependencies from Kellnr
kellnr-appstate.workspace = true
kellnr-auth.workspace = true
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-docs.workspace = true
kellnr-embedded-resources.workspace = true
kellnr-index.workspace = true
kellnr-registry.workspace = true
kellnr-settings.workspace = true
kellnr-storage.workspace = true
kellnr-web-ui.workspace = true
kellnr-webhooks.workspace = true

# External dependencies from crates.io
axum-extra.workspace = true
axum.workspace = true
flume.workspace = true
moka.workspace = true
openssl = { version = "0.10", optional = true } # Not needed directly but for cross-compilation with the vendored-openssl feature
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[features]
default = ["vendored-openssl"]
vendored-openssl = ["openssl/vendored"]

# Ignore openssl in cargo machete, else
# "cargo machete" will show openssl as an unused depedenency
[package.metadata.cargo-machete]
ignored = ["openssl"]

[lints]
workspace = true
