[package]
name = "registry"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
auth.workspace = true
common.workspace = true
db.workspace = true
error.workspace = true
settings.workspace = true
storage.workspace = true

# External dependencies from crates.io
axum.workspace = true
chrono.workspace = true
http-body-util.workspace = true
hyper.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockall.workspace = true
rm_rf.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
