[package]
name = "kellnr-registry"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# Internal dependencies from Kellnr
kellnr-appstate.workspace = true
kellnr-auth.workspace = true
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-error.workspace = true
kellnr-settings.workspace = true
kellnr-storage.workspace = true
kellnr-webhooks.workspace = true

# External dependencies from crates.io
axum.workspace = true
chrono.workspace = true
http-body-util.workspace = true
hyper.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
mockall.workspace = true
rand.workspace = true
rm_rf.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
