[package]
name = "settings"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# External dependencies from crates.io
config.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
