[package]
name = "kellnr-settings"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# External dependencies from crates.io
clap.workspace = true
clap-serde-derive.workspace = true
config.workspace = true
serde.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
