[package]
name = "storage"
authors.workspace = true
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
settings.workspace = true
common.workspace = true

# External dependencies
mockall.workspace = true
tokio.workspace = true
moka.workspace = true
axum.workspace = true
thiserror.workspace = true
sha256.workspace = true
object_store.workspace = true
bytes.workspace = true
anyhow.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
rm_rf.workspace = true
testcontainers.workspace = true
