[package]
name = "storage"
authors.workspace = true
edition.workspace = true
version.workspace = true
license-file = "../../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal dependencies
common.workspace = true
minio_testcontainer.workspace = true
settings.workspace = true

# External dependencies
async-trait.workspace = true
bytes.workspace = true
moka.workspace = true
object_store.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tokio.workspace = true

[lints]
workspace = true
