[package]
name = "kellnr-storage"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# Internal dependencies
kellnr-common.workspace = true
kellnr-settings.workspace = true
kellnr-minio-testcontainer.workspace = true

# External dependencies
async-trait.workspace = true
bytes.workspace = true
moka.workspace = true
object_store.workspace = true
sha256.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
testcontainers.workspace = true
tokio.workspace = true

[lints]
workspace = true
