[package]
name = "kellnr-web-ui"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
# Internal dependencies from Kellnr
kellnr-appstate.workspace = true
kellnr-auth.workspace = true
kellnr-common.workspace = true
kellnr-db.workspace = true
kellnr-docs.workspace = true
kellnr-registry.workspace = true
kellnr-settings.workspace = true
kellnr-storage.workspace = true

# External dependencies from crates.io
axum-extra.workspace = true
axum.workspace = true
cookie.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true

[dev-dependencies]
flume.workspace = true
hyper.workspace = true
mockall.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
