[package]
name = "web_ui"
version = "0.1.0"
edition.workspace = true
license-file = "../../LICENSE"

[dependencies]
# Internal dependencies from Kellnr
db.workspace = true
common.workspace = true
docs.workspace = true
registry.workspace = true
settings.workspace = true
auth.workspace = true
appstate.workspace = true
storage.workspace = true

# External dependencies from crates.io
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
reqwest.workspace = true
axum.workspace = true
axum-extra.workspace = true
cookie.workspace = true
http-body-util.workspace = true

[dev-dependencies]
mockall.workspace = true
hyper.workspace = true
tower.workspace = true
tokio.workspace = true
