[package]
name = "web_ui"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies from Kellnr
appstate.workspace = true
auth.workspace = true
common.workspace = true
db.workspace = true
docs.workspace = true
registry.workspace = true
settings.workspace = true
storage.workspace = true

# External dependencies from crates.io
axum-extra.workspace = true
axum.workspace = true
cookie.workspace = true
http-body-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true

[dev-dependencies]
hyper.workspace = true
mockall.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
